# nexmart-codechallenge

./: README.md  instructions.md  pyproject.toml
dashboards/: data_quality_and_sales.pbix
data/: data_quality_and_revenue.parquet  data_quality_by_variable.parquet  final_df.xlsx
notebooks/: assignment.ipynb
